.metadata/.plugins/org.eclipse.cdt.ui/defenderGame.build.log
15:16:56 **** Build of configuration Default for project defenderGame ****
xmake CONFIG=Default all 
Checking build modules
No build modules used.
Analyzing defenderGame.xc
../src/defenderGame.xc:33:7: warning: unused variable `gameEnded' [-Wunused-variable]
  int gameEnded = 0; // checks if the game has ended
      ^~~~~~~~~
../src/defenderGame.xc:51:7: warning: unused variable `gameEnded' [-Wunused-variable]
  int gameEnded = 0; // checks that game has ended
      ^~~~~~~~~
../src/defenderGame.xc:96:7: warning: unused variable `gameEnded' [-Wunused-variable]
  int gameEnded = 0; // checks if the game has ended
      ^~~~~~~~~
../src/defenderGame.xc:139:1: error: version control conflict marker in file
<<<<<<< HEAD
^
xmake[1]: *** [.build/src/defenderGame.xc.pca.xml.decouple] Error 1
xmake: *** [analyze] Error 2

15:16:57 Build Finished (took 454ms)

